fixing the card for mobile devices and wrapping up the project

--- a/Natours/sass/abstracts/_mixins.scss
+++ b/Natours/sass/abstracts/_mixins.scss
@@ -42,7 +42,7 @@
         }
     }
     @if $name == tab-port {
-        @media (max-width: 56.25em) {
+        @media only screen and (max-width: 56.25em) {
             //900px is width < 900px ?
             @content;
         }
