--- a/Natours/sass/base/_base.scss
+++ b/Natours/sass/base/_base.scss
@@ -23,3 +23,7 @@ html {
 body {
   box-sizing: border-box;
 }
+::selection {
+  background-color: $primary-dark-green;
+  color: white;
+}
